--- a/vagrant/x/Vagrantfile
+++ b/vagrant/x/Vagrantfile
@@ -19,10 +19,9 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "arch-base"
 
-  config.vm.hostname = "clibox.bethania"
+  config.vm.hostname = "xorgbox.bethania"
 
-  config.vm.synced_folder 'C:\Users\drsee\UbuntuShared', "/media/sf_UbuntuShared"
-  #config.vm.synced_folder "/mnt/c/Users/drsee/UbuntuShared/", "/media/sf_UbuntuShared"
+  config.vm.synced_folder 'C:\Users\drsee\UbuntuShared', "/shared"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -54,19 +53,27 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "ArchLinux CLI 18.02"
+    vb.name = "ArchLinux X 18.02"
 
     # Display the VirtualBox GUI when booting the machine
     vb.gui = true
  
     # Customize the amount of memory on the VM:
-    vb.memory = "2048"
+    vb.memory = "8192"
 
     # EFI boot
     vb.customize ["modifyvm", :id, "--firmware", "efi64"]
 
     # disable audio
     vb.customize ["modifyvm", :id, "--audio", "none"]
+
+    # better video
+    vb.customize ["modifyvm", :id, "--accelerate3d", "on"]
+    vb.customize ["modifyvm", :id, "--vram", "128"]
+
+    # integration with desktop
+    vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
+    vb.customize ["modifyvm", :id, "--draganddrop", "bidirectional"]
 
     # allow 6 cores
     vb.customize ["modifyvm", :id, "--cpus", "6"]
@@ -77,5 +84,7 @@ Vagrant.configure("2") do |config|
     vb.customize ["modifyvm", :id, "--usbxhci", "on"]
   end
 
-  config.vm.provision "shell", path: "cli-setup.sh", env: variables
+  config.vm.provision "shell", path: "../cli/cli-setup.sh", env: variables
+
+  config.vm.provision "shell", path: "xorg-setup.sh", env: variables
 end
