add beekeeper configuration

--- a/vagrant/beekeeper/Vagrantfile
+++ b/vagrant/beekeeper/Vagrantfile
@@ -39,14 +39,9 @@ Vagrant.configure("2") do |config|
   # via 127.0.0.1 to disable public access
   # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.56.101"
+  config.vm.network "public_network", :bridge => 'Wireless LAN adapter Wi-Fi', :mac => "08002759CE8E"
 
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network "public_network"
+  config.vm.network "private_network", ip: "192.168.56.101"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -59,7 +54,7 @@ Vagrant.configure("2") do |config|
     vb.gui = true
  
     # Customize the amount of memory on the VM:
-    vb.memory = "16384"
+    vb.memory = "32768"
 
     # EFI boot
     vb.customize ["modifyvm", :id, "--firmware", "efi64"]
