--- a/vagrant/beekeeper/configs/terminator/config
+++ b/vagrant/beekeeper/configs/terminator/config
@@ -14,5 +14,6 @@
     background_darkness = 0.7
     background_type = transparent
     cursor_color = "#aaaaaa"
+    scrollback_infinite = True
     font = Source Code Pro 12
     use_system_font = False
