--- a/vagrant/nand2tetris/Vagrantfile
+++ b/vagrant/nand2tetris/Vagrantfile
@@ -39,9 +39,7 @@ Vagrant.configure("2") do |config|
   # via 127.0.0.1 to disable public access
   # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.56.101"
+  config.vm.network "private_network", ip: "192.168.56.102"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
