--- a/vagrant/vms/hugoblog/Vagrantfile
+++ b/vagrant/vms/hugoblog/Vagrantfile
@@ -75,7 +75,7 @@ Vagrant.configure("2") do |config|
 
     # integration with desktop
     vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
-    vb.customize ["modifyvm", :id, "--draganddrop", "bidirectional"]
+    #vb.customize ["modifyvm", :id, "--draganddrop", "bidirectional"]
 
     vb.customize ["modifyvm", :id, "--cpus", "2"]
   end
