--- a/vagrant/vms/nand2tetris/Vagrantfile
+++ b/vagrant/vms/nand2tetris/Vagrantfile
@@ -71,7 +71,7 @@ Vagrant.configure("2") do |config|
 
     # integration with desktop
     vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
-    vb.customize ["modifyvm", :id, "--draganddrop", "bidirectional"]
+    #vb.customize ["modifyvm", :id, "--draganddrop", "bidirectional"]
 
     # allow 6 cores
     vb.customize ["modifyvm", :id, "--cpus", "6"]
