--- a/vagrant/vms/bigdata/Vagrantfile
+++ b/vagrant/vms/bigdata/Vagrantfile
@@ -19,6 +19,8 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "arch-base"
 
+  config.vm.define "bigdata_course"
+
   config.vm.hostname = "bigdata.bethania"
 
   config.vm.synced_folder 'C:\Users\drsee\UbuntuShared', "/shared"
@@ -74,7 +76,7 @@ Vagrant.configure("2") do |config|
     #vb.customize ["modifyvm", :id, "--draganddrop", "bidirectional"]
 
     # allow 3 cores
-    vb.customize ["modifyvm", :id, "--cpus", "3"]
+    vb.customize ["modifyvm", :id, "--cpus", "6"]
 
     # full USB3
     vb.customize ["modifyvm", :id, "--usb", "on"]
