--- a/vagrant/vms/nand2tetris/Vagrantfile
+++ b/vagrant/vms/nand2tetris/Vagrantfile
@@ -21,6 +21,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.hostname = "nand2tetris.bethania"
 
+  config.vm.define "nand2tetris"
+
   config.vm.synced_folder 'C:\Users\drsee\UbuntuShared', "/shared"
 
   # Disable automatic box update checking. If you disable this, then
