Updates to configs

--- a/vagrant/configs/albert/albert.conf
+++ b/vagrant/configs/albert/albert.conf
@@ -2,6 +2,7 @@
 hotkey=Meta+Space
 showTray=false
 standsalone_note_shown=true
+terminal=terminator -x
 
 [org.albert.extension.applications]
 enabled=true
@@ -23,9 +24,21 @@ alwaysOnTop=true
 clearOnHide=false
 displayIcons=true
 displayScrollbar=false
-displayShadow=true
+displayShadow=false
 hideOnClose=false
 hideOnFocusLoss=true
 itemCount=5
 showCentered=true
-theme=Bright
+theme=Numix
+
+[org.albert.frontend.widgetboxmodel]
+alwaysOnTop=true
+clearOnHide=false
+displayIcons=true
+displayScrollbar=false
+displayShadow=false
+hideOnClose=false
+hideOnFocusLoss=true
+itemCount=5
+showCentered=true
+theme=Numix
