--- a/vagrant/vms/example_x/Vagrantfile
+++ b/vagrant/vms/example_x/Vagrantfile
@@ -17,13 +17,13 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "arch-base"
+  config.vm.box = "arch-base-2018-12-01"
 
   config.vm.hostname = "xorgbox.bethania"
 
   config.vm.define "box_unique_name"
 
-  config.vm.synced_folder 'C:\Users\drsee\UbuntuShared', "/shared"
+  config.vm.synced_folder 'C:\Users\drsee\VirtualShared', "/shared"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -55,7 +55,7 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "ArchLinux X Example 18.02"
+    vb.name = "ArchLinux X Example 18.12"
 
     # Display the VirtualBox GUI when booting the machine
     vb.gui = true
