--- a/vagrant/vms/spark-lab/Vagrantfile
+++ b/vagrant/vms/spark-lab/Vagrantfile
@@ -19,11 +19,11 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "arch-base-2019-06-01"
 
-  config.vm.hostname = "clibox.bethania"
+  config.vm.hostname = "vm1.bethania"
 
-  config.vm.define "box_unique_name"
+  config.vm.define "spark-lab"
 
-  config.vm.synced_folder 'C:\Users\drsee\VirtualShared', "/shared"
+  config.vm.synced_folder '/home/sergey/shared', "/shared"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -45,6 +45,8 @@ Vagrant.configure("2") do |config|
   # using a specific IP.
   # config.vm.network "private_network", ip: "192.168.33.10"
 
+  config.vm.network "public_network", :bridge => 'Wireless LAN adapter Wi-Fi', :mac => "0800278F3D1F"
+
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
@@ -55,13 +57,10 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "ArchLinux CLI Example 19.06"
+    vb.name = "Spark-lab 19.06"
 
-    # Display the VirtualBox GUI when booting the machine
-    vb.gui = true
- 
     # Customize the amount of memory on the VM:
-    vb.memory = "2048"
+    vb.memory = "24576"
 
     # EFI boot
     vb.customize ["modifyvm", :id, "--firmware", "efi64"]
@@ -69,16 +68,14 @@ Vagrant.configure("2") do |config|
     # disable audio
     vb.customize ["modifyvm", :id, "--audio", "none"]
 
-    # allow 6 cores
     vb.customize ["modifyvm", :id, "--cpus", "6"]
-
-    # full USB3
-    vb.customize ["modifyvm", :id, "--usb", "on"]
-    vb.customize ["modifyvm", :id, "--usbehci", "on"]
-    vb.customize ["modifyvm", :id, "--usbxhci", "on"]
   end
 
   config.vm.provision "file", source: "../../configs", destination: "/tmp/configs"
 
+  config.vm.provision "file", source: "../../wallpapers", destination: "/tmp/wallpapers"
+
   config.vm.provision "shell", path: "../../layers/cli-setup.sh", env: variables
+
+  config.vm.provision "shell", path: "sparklab-setup.sh", env: variables
 end
