--- a/vagrant/vms/hugoblog/Vagrantfile
+++ b/vagrant/vms/hugoblog/Vagrantfile
@@ -17,13 +17,13 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "arch-base-2019-06-01"
+  config.vm.box = "arch-base-2021-03-01"
 
   config.vm.hostname = "hugoblog.bethania"
 
   config.vm.define "hugoblog"
 
-  config.vm.synced_folder 'C:\Users\drsee\VirtualShared', "/shared"
+  config.vm.synced_folder '/vms_shared', "/shared"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -57,7 +57,7 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "Hugoblog 19.06"
+    vb.name = "Hugoblog 21.03"
 
     # Display the VirtualBox GUI when booting the machine
     vb.gui = true
