--- a/vagrant/vms/example_cli/Vagrantfile
+++ b/vagrant/vms/example_cli/Vagrantfile
@@ -17,13 +17,13 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "arch-base-2019-06-01"
+  config.vm.box = "arch-base-2021-03-01"
 
   config.vm.hostname = "clibox.bethania"
 
-  config.vm.define "box_unique_name"
+  config.vm.define "example_cli"
 
-  config.vm.synced_folder 'C:\Users\drsee\VirtualShared', "/shared"
+  config.vm.synced_folder '/vm_shared', "/shared"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -45,6 +45,8 @@ Vagrant.configure("2") do |config|
   # using a specific IP.
   # config.vm.network "private_network", ip: "192.168.33.10"
 
+  config.vm.network "public_network", :bridge => 'eth0', :mac => "DEADBEEF0001"
+
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
@@ -55,13 +57,13 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "ArchLinux CLI Example 19.06"
+    vb.name = "ArchLinux CLI Example 21.03"
 
     # Display the VirtualBox GUI when booting the machine
-    vb.gui = true
+    vb.gui = false
  
     # Customize the amount of memory on the VM:
-    vb.memory = "2048"
+    vb.memory = "1024"
 
     # EFI boot
     vb.customize ["modifyvm", :id, "--firmware", "efi64"]
@@ -69,13 +71,11 @@ Vagrant.configure("2") do |config|
     # disable audio
     vb.customize ["modifyvm", :id, "--audio", "none"]
 
-    # allow 6 cores
-    vb.customize ["modifyvm", :id, "--cpus", "6"]
+    # allow 4 cores
+    vb.customize ["modifyvm", :id, "--cpus", "2"]
 
-    # full USB3
-    vb.customize ["modifyvm", :id, "--usb", "on"]
-    vb.customize ["modifyvm", :id, "--usbehci", "on"]
-    vb.customize ["modifyvm", :id, "--usbxhci", "on"]
+    # USB off
+    vb.customize ["modifyvm", :id, "--usb", "off"]
   end
 
   config.vm.provision "file", source: "../../configs", destination: "/tmp/configs"
