--- a/vagrant/vms/hugoblog/Vagrantfile
+++ b/vagrant/vms/hugoblog/Vagrantfile
@@ -23,7 +23,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "hugoblog"
 
-  config.vm.synced_folder '/vms_shared', "/shared"
+  config.vm.synced_folder '/tmp', "/shared"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
